Add native checks support for preview (pre-22) versions