@@ -9,24 +9,16 @@
 
 package org.elasticsearch.entitlement.qa.test;
 
-import org.elasticsearch.entitlement.qa.entitled.EntitledPlugin;
-
-import java.lang.foreign.AddressLayout;
-import java.lang.foreign.Arena;
 import java.lang.foreign.FunctionDescriptor;
 import java.lang.foreign.Linker;
-import java.lang.foreign.MemoryLayout;
 import java.lang.foreign.MemorySegment;
+import java.lang.foreign.MemorySession;
 import java.lang.foreign.SymbolLookup;
 import java.lang.foreign.ValueLayout;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
-import java.lang.module.Configuration;
-import java.lang.module.ModuleFinder;
 import java.nio.file.Path;
-import java.util.List;
-import java.util.Set;
 
 import static java.lang.foreign.ValueLayout.ADDRESS;
 import static java.lang.foreign.ValueLayout.JAVA_LONG;
@@ -34,24 +26,11 @@ import static java.lang.foreign.ValueLayout.JAVA_LONG;
 class VersionSpecificNativeChecks {
 
     static void enableNativeAccess() throws Exception {
-        ModuleLayer parent = ModuleLayer.boot();
-
-        var location = EntitledPlugin.class.getProtectionDomain().getCodeSource().getLocation();
-
-        // We create a layer for our own module, so we have a controller to try and call enableNativeAccess on it.
-        // This works in both the modular and non-modular case: the target module has to be present in the new layer, but its entitlements
-        // and policies do not matter to us: we are checking that the caller is (or isn't) entitled to use enableNativeAccess
-        Configuration cf = parent.configuration()
-            .resolve(ModuleFinder.of(Path.of(location.toURI())), ModuleFinder.of(), Set.of("org.elasticsearch.entitlement.qa.entitled"));
-        var controller = ModuleLayer.defineModulesWithOneLoader(cf, List.of(parent), ClassLoader.getSystemClassLoader());
-        var targetModule = controller.layer().findModule("org.elasticsearch.entitlement.qa.entitled");
-
-        controller.enableNativeAccess(targetModule.get());
+        // Available only from Java20
     }
 
     static void addressLayoutWithTargetLayout() {
-        AddressLayout addressLayout = ADDRESS.withoutTargetLayout();
-        addressLayout.withTargetLayout(MemoryLayout.sequenceLayout(Long.MAX_VALUE, ValueLayout.JAVA_BYTE));
+        // Available only from Java20
     }
 
     static void linkerDowncallHandle() {
@@ -61,7 +40,7 @@ class VersionSpecificNativeChecks {
 
     static void linkerDowncallHandleWithAddress() {
         Linker linker = Linker.nativeLinker();
-        linker.downcallHandle(linker.defaultLookup().find("strlen").get(), FunctionDescriptor.of(JAVA_LONG, ADDRESS));
+        linker.downcallHandle(linker.defaultLookup().lookup("strlen").get(), FunctionDescriptor.of(JAVA_LONG, ADDRESS));
     }
 
     static int callback() {
@@ -79,30 +58,32 @@ class VersionSpecificNativeChecks {
         }
 
         FunctionDescriptor callbackDescriptor = FunctionDescriptor.of(ValueLayout.JAVA_INT);
-        linker.upcallStub(mh, callbackDescriptor, Arena.ofAuto());
+        linker.upcallStub(mh, callbackDescriptor, MemorySession.openImplicit());
     }
 
     static void memorySegmentReinterpret() {
-        Arena arena = Arena.ofAuto();
-        MemorySegment segment = arena.allocate(100);
-        segment.reinterpret(50);
+        MemorySession scope = MemorySession.openImplicit();
+        MemorySegment someSegment;
+        try {
+            someSegment = MemorySegment.allocateNative(100, scope);
+            var foreign = someSegment.get(ValueLayout.ADDRESS, 0);
+            var segment = MemorySegment.ofAddress(foreign, 4, scope);
+        } finally {
+            someSegment = null;
+        }
     }
 
     static void memorySegmentReinterpretWithCleanup() {
-        Arena arena = Arena.ofAuto();
-        MemorySegment segment = arena.allocate(100);
-        segment.reinterpret(Arena.ofAuto(), s -> {});
+        // No equivalent to this function before Java20
     }
 
-    static void memorySegmentReinterpretWithSizeAndCleanup() {
-        Arena arena = Arena.ofAuto();
-        MemorySegment segment = arena.allocate(100);
-        segment.reinterpret(50, Arena.ofAuto(), s -> {});
+    static void memorySegmentReinterpretWithSize() {
+        // No equivalent to this function before Java20
     }
 
     static void symbolLookupWithPath() {
         try {
-            SymbolLookup.libraryLookup(Path.of("/foo/bar/libFoo.so"), Arena.ofAuto());
+            SymbolLookup.libraryLookup(Path.of("/foo/bar/libFoo.so"), MemorySession.openImplicit());
         } catch (IllegalArgumentException e) {
             // IllegalArgumentException is thrown if path does not point to a valid library (and it does not)
         }
@@ -110,7 +91,7 @@ class VersionSpecificNativeChecks {
 
     static void symbolLookupWithName() {
         try {
-            SymbolLookup.libraryLookup("foo", Arena.ofAuto());
+            SymbolLookup.libraryLookup("foo", MemorySession.openImplicit());
         } catch (IllegalArgumentException e) {
             // IllegalArgumentException is thrown if path does not point to a valid library (and it does not)
         }
